--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ margin: 0%;
 padding: 0%;
 }
 
+html
+{
+    scroll-behavior: smooth;
+}
+
 #preLoader{
     width: 100%;
     height: 100vh;
@@ -42,4 +47,18 @@ li a:hover {
 {
     color: white;
     font-family: 'Orbitron', sans-serif;
+}
+
+#about
+{
+    font-size: 2em;
+    color: black;
+    font-family: 'Orbitron', sans-serif;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.background-xenith
+{
+    background-color: #14062e;
 }
