--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-
-
 *{
 margin: 0%;
 padding: 0%;
 }
-
+.body{
+    height: 100vh;
+    overflow: hidden;
+}
+.lotter-bg{
+    width: 100%;
+}
+@media only screen and (max-width: 600px) {
+    .lotter-bg{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+}
+.hidden{
+    display: none !important;
+}
 #preLoader{
     width: 100%;
     height: 100vh;
 }
 
-li a {
+.cp-tag {
     text-decoration: none;
     display: inline-block;
     position: relative;
@@ -20,7 +34,7 @@ li a {
     font-family: 'Orbitron', sans-serif;
 }
 
-li a::before {
+.cp-tag::before {
     transition: 300ms;
     height: 3px;
     content: "";
@@ -30,11 +44,11 @@ li a::before {
     bottom: 20px;
 }
 
-li a:hover::before{
+.cp-tag:hover::before{
     width: 100%;
 }
 
-li a:hover {
+.cp-tag:hover {
     opacity: 1;
 }
 
@@ -43,3 +57,128 @@ li a:hover {
     color: white;
     font-family: 'Orbitron', sans-serif;
 }
+
+
+/* Navbar-mb*/
+.nav-mb{
+    position: fixed;
+    top: 0;
+}
+.a-tag {
+    text-decoration: none;
+    color: #1E1E23;
+    opacity:1;
+    font-family: 'work sans', sans serif;
+    font-size: 1.5em;
+    font-weight: 400;
+    transition: 200ms;
+  }
+  .a-tag:hover{
+    opacity:0.5;
+    color: #512e7f;
+    text-decoration: none;
+  }
+  ul {
+    padding: 0;
+    list-style-type: none;
+  }
+  .content {
+    border: 1px solid #36383F;
+    border-radius: 20px;
+    width: 100%;
+    height: 91%;
+    background-color: #F5F6FA;
+  }
+  nav {
+    height: 65px;
+  }
+  #menuToggle {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 25px;
+    left: 25px;
+    z-index: 15 !important;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  #menuToggle input
+  {
+    display: flex;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+  }
+  #menuToggle span
+  {
+    display: flex;
+    width: 29px;
+    height: 2px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #ffffff;
+    border-radius: 3px;
+    z-index: 1;
+    transform-origin: 5px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+    background: white;
+  }
+  
+  #menuToggle span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+  
+  #menuToggle span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+  
+  #menuToggle input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-3px, -1px);
+    background: #36383F;
+  }
+  #menuToggle input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  #menuToggle input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  
+  #menu
+  {
+    position: absolute;
+    width: 180px;
+    height: 100vh;
+    box-shadow: 0 0 10px #85888C;
+    margin: -50px 0 0 -50px;
+    padding: 50px;
+    padding-top: 125px;
+    background-color: #F5F6FA;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  
+  #menu li
+  {
+    padding: 10px 0;
+    transition-delay: 2s;
+  }
+  
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }
