--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,12 @@ li a:hover {
     font-weight: bold;
 }
 
+#navbarMain {
+    transition: all 0.5s ease-out;
+}
+
 .background-xenith
 {
     background-color: #14062e;
+    transition: all 0.5s ease-in;
 }
