--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,15 @@ padding: 0%;
 }
 .body{
     height: 100vh;
-    overflow: hidden !important;
+    width: 100%;
+    overflow-y: hidden;
 }
 .lotter-bg{
     width: 100%;
 }
 @media only screen and (max-width: 700px) {
-    .lotter-bg{
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
     .lottie-bg{
+        height: 100%;
         width: 100%;
         object-fit: cover;
     }
