--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,12 @@ padding: 0%;
 .lotter-bg{
     width: 100%;
 }
+
+html
+{
+  scroll-behavior: smooth;
+}
+
 @media only screen and (max-width: 700px) {
     .lottie-bg{
         height: 100%;
