--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,99 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
-*{
-margin: 0%;
-padding: 0%;
--webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    --bg-color: linear-gradient(to right, "#402571", "#311F65");
-    --typeSpeed: 2.5s;
-    --textLength: 9; 
-}   
-*:focus {
-    outline: none !important;
-}
-html
-{
-  scroll-behavior: smooth;
-}
-.body{
-    height: 100vh;
-    width: 100%;
-    overflow-y: hidden;
-}
-.lotter-bg{
-    width: 100%;
+
+* {
+  margin: 0%;
+  padding: 0%;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  --bg-color: linear-gradient(to right, "#402571", "#311F65");
+  --typeSpeed: 2.5s;
+  --textLength: 9;
 }
 
-html
-{
+*:focus {
+  outline: none !important;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+.body {
+  height: 100vh;
+  width: 100%;
+  overflow-y: hidden;
+}
+
+.lotter-bg {
+  width: 100%;
+}
+
+html {
   scroll-behavior: smooth;
 }
 
 
 
 @media only screen and (max-width: 700px) {
-    .lottie-bg{
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-    }
-    .hidden{
-        display: block !important;
-    }
-    .active{
-        display: none !important;
-    }
+  .lottie-bg {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .hidden {
+    display: block !important;
+  }
+
+  .active {
+    display: none !important;
+  }
 }
 
-.hidden{
-    display: none;
+.hidden {
+  display: none;
 }
-#preLoader{
-    width: 100%;
-    height: 100vh;
+
+#preLoader {
+  width: 100%;
+  height: 100vh;
 }
 
 .cp-tag {
-    text-decoration: none;
-    display: inline-block;
-    position: relative;
-    opacity: 0.75;
-    font-weight: bold;
-    font-family: 'Orbitron', sans-serif;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  opacity: 0.75;
+  font-weight: bold;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .cp-tag::before {
-    transition: 300ms;
-    height: 3px;
-    content: "";
-    position: absolute;
-    background-color: white;
-    width: 0%;
-    bottom: 20px;
+  transition: 300ms;
+  height: 3px;
+  content: "";
+  position: absolute;
+  background-color: white;
+  width: 0%;
+  bottom: 20px;
 }
 
-.cp-tag:hover::before{
-    width: 100%;
+.cp-tag:hover::before {
+  width: 100%;
 }
 
 .cp-tag:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .hero-heading {
-    color: white;
-    font-family: 'Orbitron', sans-serif;
+  color: white;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .heading-title {
@@ -106,7 +112,7 @@ html
 }
 
 .heading-title::before {
-  background-image: linear-gradient(to right, rgba(64, 37, 113, 1), rgba(51,32,102, 1));
+  background-image: linear-gradient(to right, rgba(64, 37, 113, 1), rgba(51, 32, 102, 1));
   animation: animateTyping var(--typeSpeed) steps(var(--textLength)) forwards;
 }
 
@@ -129,191 +135,518 @@ html
 }
 
 /* Navbar-mb*/
-.nav-mb{
-    position: fixed;
-    top: 0;
+.nav-mb {
+  position: fixed;
+  top: 0;
 }
+
 .a-tag {
-    text-decoration: none;
-    color: #1E1E23;
-    opacity:1;
-    font-family: 'work sans', sans serif;
-    font-size: 1.6em;
-    font-weight: 400;
-    transition: 200ms;
-  }
-  .a-tag:hover{
-    opacity:0.5;
-    color: #512e7f;
-    text-decoration: none;
-  }
-  ul {
-    text-align: center;
-    padding: 0;
-    list-style-type: none;
-  }
-  .content {
-    border: 1px solid #36383F;
-    border-radius: 20px;
-    width: 100%;
-    height: 91%;
-    background-color: #F5F6FA;
-  }
-  nav {
-    height: 65px;
-  }
-  #menuToggle {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    top: 25px;
-    left: 25px;
-    z-index: 15 !important;
-    -webkit-user-select: none;
-    user-select: none;
-  }
-  #menuToggle input
-  {
-    display: flex;
-    width: 40px;
-    height: 32px;
-    position: absolute;
-    cursor: pointer;
-    opacity: 0;
-    z-index: 2;
-  }
-  #menuToggle span
-  {
-    display: flex;
-    width: 29px;
-    height: 2px;
-    margin-bottom: 5px;
-    position: relative;
-    background: #ffffff;
-    border-radius: 3px;
-    z-index: 1;
-    transform-origin: 5px 0px;
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-                opacity 0.55s ease;
-    background: white;
-  }
-  
-  #menuToggle span:first-child
-  {
-    transform-origin: 0% 0%;
-  }
-  
-  #menuToggle span:nth-last-child(2)
-  {
-    transform-origin: 0% 100%;
-  }
-  
-  #menuToggle input:checked ~ span
-  {
-    opacity: 1;
-    transform: rotate(45deg) translate(-3px, -1px);
-    background: #36383F;
-  }
-  #menuToggle input:checked ~ span:nth-last-child(3)
-  {
-    opacity: 0;
-    transform: rotate(0deg) scale(0.2, 0.2);
-  }
-  
-  #menuToggle input:checked ~ span:nth-last-child(2)
-  {
-    transform: rotate(-45deg) translate(0, -1px);
-  }
-  
-  #menu
-  {
-    position: absolute;
-    width: 220px;
-    height: 100vh;
-    box-shadow: 0 0 10px #85888C;
-    margin: -50px 0 0 -50px;
-    padding: 50px;
-    padding-top: 125px;
-    background-color: #F5F6FA;
-    -webkit-font-smoothing: antialiased;
-    transform-origin: 0% 0%;
-    transform: translate(-100%, 0);
-    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-  }
-  
-  #menu li
-  {
-    padding: 10px 0;
-    transition-delay: 2s;
-  }
-  
-  #menuToggle input:checked ~ ul
-  {
-    transform: none;
-  }
+  text-decoration: none;
+  color: #1E1E23;
+  opacity: 1;
+  font-family: 'work sans', sans serif;
+  font-size: 1.6em;
+  font-weight: 400;
+  transition: 200ms;
+}
+
+.a-tag:hover {
+  opacity: 0.5;
+  color: #512e7f;
+  text-decoration: none;
+}
+
+ul {
+  text-align: center;
+  padding: 0;
+  list-style-type: none;
+}
+
+.content {
+  border: 1px solid #36383F;
+  border-radius: 20px;
+  width: 100%;
+  height: 91%;
+  background-color: #F5F6FA;
+}
+
+nav {
+  height: 65px;
+}
+
+#menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 25px;
+  left: 25px;
+  z-index: 15 !important;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle input {
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+}
+
+#menuToggle span {
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
+    opacity 0.55s ease;
+  background: white;
+}
+
+#menuToggle span:first-child {
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2) {
+  transform-origin: 0% 100%;
+}
+
+#menuToggle input:checked~span {
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383F;
+}
+
+#menuToggle input:checked~span:nth-last-child(3) {
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked~span:nth-last-child(2) {
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu {
+  position: absolute;
+  width: 220px;
+  height: 100vh;
+  box-shadow: 0 0 10px #85888C;
+  margin: -50px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  background-color: #F5F6FA;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+#menu li {
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+#menuToggle input:checked~ul {
+  transform: none;
+}
+
 .sectionHead {
-    font-size: 2em;
-    color: black;
-    font-family: 'Orbitron', sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin-top: 5%;
+  font-size: 2em;
+  color: black;
+  font-family: 'Orbitron', sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 5%;
+}
+
+.sectionHeadLight {
+  font-size: 2em;
+  color: white;
+  font-family: 'Orbitron', sans-serif;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 5%;
 }
 
 #navbarMain {
-    transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
 }
 
-.background-xenith
-{
-    background-color: rgba(37, 11, 85, 1);
-    transition: all 0.8s ease-in;
-}
-.c-white{
-  color:white !important;
+.background-xenith {
+  background-color: rgba(37, 11, 85, 1);
   transition: all 0.8s ease-in;
 }
 
-#pos-rel-1
-{
+.c-white {
+  color: white !important;
+  transition: all 0.8s ease-in;
+}
+
+#pos-rel-1 {
   max-height: 110vh;
   overflow: hidden;
 }
 
-#about
-{
+#about {
   height: 50vh;
   overflow: hidden;
   padding: 5%;
 }
 
-#event
-{
-  height: 100vh;
+#event {
+  height: 140vh;
   overflow: hidden;
   padding: 5%;
 }
 
-.section-text
-{
+.event-card {
+  height: 40vh;
+  margin: 0% 3%;
+}
+
+#timeline {
+  height: 120vh;
+  overflow: hidden;
+  padding: 5%;
+  background-image: url("../src/timeline.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.section-text {
   margin: 0% 5%;
 }
 
 @media only screen and (max-width: 700px) {
-  #about
-  {
+  #about {
     height: 100vh;
     overflow: hidden;
   }
 
+  #event {
+    height: 330vh;
+    overflow: hidden;
+    padding: 5%;
+  }
+
+  .event-card {
+    height: 100vh;
+    margin: 0% 3%;
+  }
+
+  #timeline {
+    height: 130vh;
+    overflow: hidden;
+    padding: 5%;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
-  #about
-  {
+  #about {
     height: 110vh;
     overflow: hidden;
+  }
+
+  #event {
+    height: 330vh;
+    overflow: hidden;
+    padding: 5%;
+  }
+
+  .event-card {
+    height: 100vh;
+    margin: 0% 3%;
+  }
+
+  #timeline {
+    height: 130vh;
+    overflow: hidden;
+    padding: 5%;
+  }
+}
+
+/* ================ The Timeline ================ */
+
+.timeline {
+  position: relative;
+  width: 660px;
+  margin: 0 auto;
+  margin-top: 20px;
+  padding: 1em 0;
+  list-style-type: none;
+}
+
+.timeline:before {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  content: ' ';
+  display: block;
+  width: 6px;
+  height: 100%;
+  margin-left: -3px;
+  background: #360033;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #0b8793, #360033);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #0b8793, #360033);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  z-index: 5;
+}
+
+.timeline li {
+  padding: 2em 0;
+}
+
+.timeline li:after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.direction-l {
+  position: relative;
+  width: 300px;
+  float: left;
+  text-align: right;
+}
+
+.direction-r {
+  position: relative;
+  width: 250px;
+  float: right;
+}
+
+.flag-wrapper {
+  position: relative;
+  display: inline-block;
+
+  text-align: center;
+}
+
+.flag {
+  position: relative;
+  display: inline;
+  background: transparent;
+  color: white;
+  padding: 6px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+  text-align: left;
+  border: 2px solid white;
+}
+
+.direction-l .flag {
+  -webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+  box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+}
+
+.direction-r .flag {
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+}
+
+.direction-l .flag:before,
+.direction-r .flag:before {
+  position: absolute;
+  top: 50%;
+  right: -40px;
+  content: ' ';
+  display: block;
+  width: 12px;
+  height: 12px;
+  margin-top: -10px;
+  background: #fff;
+  border-radius: 10px;
+  border: 4px solid rgb(39, 22, 99);
+  z-index: 10;
+}
+
+.direction-r .flag:before {
+  left: -92px;
+}
+
+.direction-l .flag:after {
+  content: "";
+  position: absolute;
+  left: 100%;
+  top: 50%;
+  height: 0;
+  width: 0;
+  margin-top: -8px;
+  border: solid transparent;
+  border-left-color: rgb(248, 248, 248);
+  border-width: 8px;
+  pointer-events: none;
+}
+
+.direction-r .flag:after {
+  content: "";
+  position: absolute;
+  right: 100%;
+  top: 50%;
+  height: 0;
+  width: 0;
+  margin-top: -8px;
+  border: solid transparent;
+  border-right-color: rgb(248, 248, 248);
+  border-width: 8px;
+  pointer-events: none;
+}
+
+.time-wrapper {
+  display: inline;
+  line-height: 1em;
+  font-size: 0.66666em;
+  color: white;
+  vertical-align: middle;
+}
+
+.direction-l .time-wrapper {
+  float: left;
+}
+
+.direction-r .time-wrapper {
+  float: right;
+}
+
+.time {
+  display: inline-block;
+  padding: 4px 3px;
+  background: transparent;
+}
+
+.desc {
+  margin: 1em 0.75em 0 0;
+  color: white;
+  font-size: 0.77777em;
+  font-style: italic;
+  line-height: 1.5em;
+}
+
+.direction-r .desc {
+  margin: 1em 0 0 0.75em;
+}
+
+/* ================ Timeline Media Queries ================ */
+
+@media screen and (max-width: 660px) {
+
+  .timeline {
+    width: 100%;
+    padding: 4em 0 1em 0;
+  }
+
+  .timeline li {
+    padding: 2em 0;
+  }
+
+  .direction-l,
+  .direction-r {
+    float: none;
+    width: 100%;
+
+    text-align: center;
+  }
+
+  .flag-wrapper {
+    text-align: center;
+  }
+
+  .flag {
+    background: rgb(255, 255, 255);
+    z-index: 15;
+  }
+
+  .direction-l .flag:before,
+  .direction-r .flag:before {
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    content: ' ';
+    display: block;
+    width: 12px;
+    height: 12px;
+    margin-left: -9px;
+    background: #fff;
+    border-radius: 10px;
+    border: 4px solid rgb(255, 80, 80);
+    z-index: 10;
+  }
+
+  .direction-l .flag:after,
+  .direction-r .flag:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: -8px;
+    height: 0;
+    width: 0;
+    margin-left: -8px;
+    border: solid transparent;
+    border-bottom-color: rgb(255, 255, 255);
+    border-width: 8px;
+    pointer-events: none;
+  }
+
+  .time-wrapper {
+    display: block;
+    position: relative;
+    margin: 4px 0 0 0;
+    z-index: 14;
+  }
+
+  .direction-l .time-wrapper {
+    float: none;
+  }
+
+  .direction-r .time-wrapper {
+    float: none;
+  }
+
+  .desc {
+    position: relative;
+    margin: 1em 0 0 0;
+    padding: 1em;
+    background: rgb(245, 245, 245);
+    -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+    -moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
+
+    z-index: 15;
+  }
+
+  .direction-l .desc,
+  .direction-r .desc {
+    position: relative;
+    margin: 1em 1em 0 1em;
+    padding: 1em;
+
+    z-index: 15;
+  }
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 660px) {
+
+  .direction-l .desc,
+  .direction-r .desc {
+    margin: 1em 4em 0 4em;
   }
 
 }
