--- a/css/style.css
+++ b/css/style.css
@@ -62,3 +62,198 @@ li a:hover {
 {
     background-color: #14062e;
 }
+
+.footer {
+    background: rgb(101, 10, 143);
+    color: #d3d3d3;
+    height: 450px;
+    position: relative;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+      
+  }
+  
+  .footer .footer-content {
+    height: 350px;
+    display: flex;
+  }
+  
+  .footer .footer-content .footer-section {
+    flex: 1;
+    padding: 25px;     
+
+  }
+  
+  .footer .footer-content h1,
+  .footer .footer-content h2 {
+    color: white;
+  }
+  
+  .footer .footer-content .about h1 span {
+    color: #05f7ff;
+  }
+  
+  .footer .footer-content .about .contact span {
+    display: block;
+    font-size: 1.2em;
+    margin-bottom: 8px;
+  }
+  
+  
+  .footer .footer-content .links ul a {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.2em;
+    transition: all .3s;
+    color: #fafafa;
+  }
+  
+  .footer .footer-content .links ul a:hover {
+    color: rgb(233, 156, 248);
+    margin-left: 15px;
+    transition: all .3s;
+  }
+  
+  .footer .footer-content .contact-form .contact-input {
+    background: purple;
+    color: #bebdbd;
+    margin-bottom: 10px;
+    line-height: 1.5rem;
+    padding: .9rem 1.4rem;
+    border: none;
+  }
+  
+  .footer .footer-content .contact-form .contact-input:focus {
+    background: #1a1a1a;
+  }
+  
+  .footer .footer-content .contact-form .contact-btn {
+    float: right;
+    font-size: 1.2em;
+   
+  }
+  
+  .footer .footer-bottom {
+    background: rgb(101, 10, 143);
+    color: #686868;
+    height: 150px;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding-top: 20px;
+  }
+  .container
+  {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      margin-top: 15px;
+      
+  }
+  .btn
+  {
+      width: 50px;
+      height: 50px;
+      background-color: #fafafa;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-left: 1em;
+      margin-right: 0.5em;
+      cursor: pointer;
+      transition: all 0.3s;
+      border-radius: 10px;
+  }
+  i.fa
+  {
+      font-size: 30px;
+  }
+  #fb
+  {
+      color: #006fff;
+      text-shadow: 0 0 20px #006fff;
+  }
+  #ig
+  {
+      color: #ff5f40;
+      text-shadow: 0 0 20px #ff5f40;
+  }
+  #ln
+  {
+      color: #00acff;
+      text-shadow: 0 0 20px #00acff;
+  }
+  #yt
+  {
+      color: #ff0000;
+      text-shadow: 0 0 30px #ff0000;
+  }
+  #gt
+  {
+      color: #860c0c;
+      text-shadow: 0 0 15px #860c0c;
+  }
+  .btn.fb-btn
+  {
+      box-shadow: 0 15px 15px -11px rgba(0,111,255,0.53);
+  }
+  .btn.fb-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow: 0 20px 35px -9px rgba(0,111,255,0.65);
+  }
+  .btn.ig-btn
+  {
+      box-shadow: 0 15px 15px -11px rgba(255,16,39,0.5);
+  }
+  .btn.ig-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow: 0 20px 35px -9px  rgba(255,16,39,0.57);
+  }
+  .btn.gt-btn
+  {
+      box-shadow: 0 15px 15px -11px #be1818;
+  }
+  .btn.gt-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow:0 20px 35px -9px #860c0c;
+  }
+  
+  .btn.yt-btn
+  {
+      box-shadow: 0 15px 15px -11px rgba(255, 47, 47, 0.53);
+  }
+  .btn.yt-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow:0 20px 35px -9px rgba(236, 5, 5, 0.6);
+  }
+  
+  .btn.ln-btn
+  {
+      box-shadow: 0 15px 15px -11px rgba(0,255,255,0.53);
+  }
+  .btn.ln-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow:0 20px 35px -9px rgba(0,111,255,0.6);
+  }
+  h1
+  {
+      color: #f5f5f5;
+  }
+  
+@keyframes flicker {
+    50% {
+      color: white;
+      filter: saturate(200%) hue-rotate(20deg);
+    }
+  }
+.contentfooter
+{
+    font-size: 20px;
+}
