--- a/css/style.css
+++ b/css/style.css
@@ -63,77 +63,8 @@ li a:hover {
     background-color: #14062e;
 }
 
-.footer {
-    background: rgb(101, 10, 143);
-    color: #d3d3d3;
-    height: 450px;
-    position: relative;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-      
-  }
-  
-  .footer .footer-content {
-    height: 350px;
-    display: flex;
-  }
-  
-  .footer .footer-content .footer-section {
-    flex: 1;
-    padding: 25px;     
-
-  }
-  
-  .footer .footer-content h1,
-  .footer .footer-content h2 {
-    color: white;
-  }
-  
-  .footer .footer-content .about h1 span {
-    color: #05f7ff;
-  }
-  
-  .footer .footer-content .about .contact span {
-    display: block;
-    font-size: 1.2em;
-    margin-bottom: 8px;
-  }
-  
-  
-  .footer .footer-content .links ul a {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 1.2em;
-    transition: all .3s;
-    color: #fafafa;
-  }
-  
-  .footer .footer-content .links ul a:hover {
-    color: rgb(233, 156, 248);
-    margin-left: 15px;
-    transition: all .3s;
-  }
-  
-  .footer .footer-content .contact-form .contact-input {
-    background: purple;
-    color: #bebdbd;
-    margin-bottom: 10px;
-    line-height: 1.5rem;
-    padding: .9rem 1.4rem;
-    border: none;
-  }
-  
-  .footer .footer-content .contact-form .contact-input:focus {
-    background: #1a1a1a;
-  }
-  
-  .footer .footer-content .contact-form .contact-btn {
-    float: right;
-    font-size: 1.2em;
-   
-  }
-  
   .footer .footer-bottom {
-    background: rgb(101, 10, 143);
+    background: rgb(55,33,105);
     color: #686868;
     height: 150px;
     width: 100%;
@@ -256,4 +187,130 @@ li a:hover {
 .contentfooter
 {
     font-size: 20px;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+
+.footer {
+  position: relative;
+  width: 100%;
+  background: rgb(55,33,105);
+  min-height: 100px;
+  padding: 20px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height:500px
+}
+
+.social-icon,
+.menu {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  flex-wrap: wrap;
+}
+
+.social-icon__item,
+.menu__item {
+  list-style: none;
+}
+
+.social-icon__link {
+  font-size: 2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+}
+.social-icon__link:hover {
+  transform: translateY(-10px);
+}
+
+.menu__link {
+  font-size: 1.2rem;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+  transition: 0.5s;
+  text-decoration: none;
+  opacity: 0.75;
+  font-weight: 300;
+}
+
+.menu__link:hover {
+  opacity: 1;
+}
+
+.footer p {
+  color: #fff;
+  margin: 15px 0 10px 0;
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.wave {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: url("https://i.ibb.co/wQZVxxk/wave.png"); /*add css/wave.png instead*/
+  background-size: 1000px 100px;
+}
+
+.wave#wave1 {
+  z-index: 1000;
+  opacity: 1;
+  bottom: 0;
+  animation: animateWaves 4s linear infinite;
+}
+
+.wave#wave2 {
+  z-index: 999;
+  opacity: 0.5;
+  bottom: 10px;
+  animation: animate 4s linear infinite !important;
+}
+
+.wave#wave3 {
+  z-index: 1000;
+  opacity: 0.2;
+  bottom: 15px;
+  animation: animateWaves 3s linear infinite;
+}
+
+.wave#wave4 {
+  z-index: 999;
+  opacity: 0.7;
+  bottom: 20px;
+  animation: animate 3s linear infinite;
+}
+
+@keyframes animateWaves {
+  0% {
+    background-position-x: 1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
+}
+
+@keyframes animate {
+  0% {
+    background-position-x: -1000px;
+  }
+  100% {
+    background-positon-x: 0px;
+  }
 }
