--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ li a:hover {
 }
 
   .footer .footer-bottom {
-    background: rgb(55,33,105);
+    background: rgb(59,35,108);
     color: #686868;
     height: 150px;
     width: 95%;
@@ -193,7 +193,7 @@ li a:hover {
 .footer {
   position: relative;
   width: 100%;
-  background: rgb(55,33,105);
+  background: rgb(59,35,108);
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
@@ -258,7 +258,7 @@ li a:hover {
   left: 0;
   width: 100%;
   height: 100px;
-  background: url("https://i.ibb.co/wQZVxxk/wave.png"); /*add css/wave.png instead*/
+  background: url("wave.png"); /*add css/wave.png instead*/
   background-size: 1000px 100px;
 }
 
