--- a/css/style.scss
+++ b/css/style.scss
@@ -1,70 +1,55 @@
+@import "compass/css3";
 
-.glitch {
-	position: relative;
-	color: white;
-	font-size: 2em;
-	letter-spacing: .1em;
-	/* Animation provies a slight random skew. Check bottom of doc
-	for more information on how to random skew. */
-	animation: glitch-skew 1s infinite linear alternate-reverse;
-	
-	// Creates a copy before our text. 
-	&::before{
-		// Duplicates our text with the mixin.
-		@include glitchCopy;
-		// Scoots text slightly to the left for the color offset.
-		left: 2px;
-		// Creates the color 'shadow' that happens on the glitch.
-		text-shadow: -2px 0 #ff00c1;
-		/* Creates an initial clip for our glitch. This works in
-		a typical top,right,bottom,left fashion and creates a mask
-		to only show a certain part of the glitch at a time. */
-		clip: rect(44px, 450px, 56px, 0);
-		/* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
-		with an alternating animation to keep things fresh. */
-		animation: glitch-anim 6s infinite linear alternate-reverse;
-	}
-	
-	// Creates a copy after our text. Note comments from ::before.
-	&::after {
-		@include glitchCopy;
-		left: -2px;
-		text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
-		animation: glitch-anim2 1s infinite linear alternate-reverse;
-	}
+body{
+  background:black;
+  font-family: 'Varela', sans-serif;
 }
 
-/* Creates an animation with 20 steaps. For each step, it calculates 
-a percentage for the specific step. It then generates a random clip
-box to be used for the random glitch effect. Also adds a very subtle
-skew to change the 'thickness' of the glitch.*/
-@keyframes glitch-anim {
-  $steps: 20;
-  @for $i from 0 through $steps {
-    #{percentage($i*(1/$steps))} {
-      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
-			transform: skew((random(100) / 100) + deg);
+.glitch{
+  color:white;
+  font-size:30px;
+  position:relative;
+  width:400px;
+  margin:0 auto;
+}
+@keyframes noise-anim{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(30)+px,9999px,random(30)+px,0);
     }
   }
 }
+.glitch:after{
+  content:attr(data-text);
+  position:absolute;
+  left:2px;
+  text-shadow:-1px 0 red;
+  top:0;
+  color:white;
+  background:black;
+  overflow:hidden;
+  clip:rect(0,900px,0,0); 
+  animation:noise-anim 3s infinite linear alternate-reverse;
+}
 
-// Same deal, just duplicated for ultra randomness.
-@keyframes glitch-anim2 {
-  $steps: 20;
-  @for $i from 0 through $steps {
-    #{percentage($i*(1/$steps))} {
-      clip: rect(random(100)+px, 9999px, random(100)+px, 0);
-			transform: skew((random(100) / 100) + deg);
+@keyframes noise-anim-2{
+  $steps:20;
+  @for $i from 0 through $steps{
+    #{percentage($i*(1/$steps))}{
+      clip:rect(random(30)+px,9999px,random(30)+px,0);
     }
   }
 }
-
-// Does the same deal as before, but now only skews. Used for main text.
-@keyframes glitch-skew {
-  $steps: 10;
-  @for $i from 0 through $steps {
-    #{percentage($i*(1/$steps))} {
-      transform: skew((random(10) - 5) + deg);
-    }
-  }
+.glitch:before{
+  content:attr(data-text);
+  position:absolute;
+  left:-2px;
+  text-shadow:1px 0 blue; 
+  top:0;
+  color:white;
+  background:black;
+  overflow:hidden;
+  clip:rect(0,900px,0,0); 
+  animation:noise-anim-2 5s infinite linear alternate-reverse;
 }
