--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ li a:hover {
     color: #686868;
     height: 150px;
     width: 95%;
-    text-align: center;
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -78,7 +77,7 @@ li a:hover {
   .container
   {
       display: flex;
-      justify-content: center;
+      justify-content:center;
       align-items: center;
       height: 100%;
       margin-top: 15px;
@@ -321,13 +320,13 @@ li a:hover {
 }
 .footer .footer-content .about {
     width: 550px;
-    margin-right: 350px;
+    margin-right:100px;
     height: 300px;
 }
 
 .footer .footer-content .links {
     width: 350px;
-    margin-right: 350px;
+    margin-right:100px;
 }
 .footer .footer-content h1,
 .footer .footer-content h2 {
@@ -363,7 +362,8 @@ li a:hover {
 	 color: white;
 	 font-size: 40px;
 	 position: relative;
-	 width: 400px;
+   
+	 /* width: 400px; */
 }
  @keyframes noise-anim {
 	 0% {
@@ -519,4 +519,9 @@ li a:hover {
 	 clip: rect(0, 900px, 0, 0);
 	 animation: noise-anim-2 3s infinite linear alternate-reverse;
 }
- 
+ .foot-follow
+ {
+   position:relative;
+   margin: auto;
+   width:350px;
+ }
