--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,8 @@ li a:hover {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-left: 1em;
-      margin-right: 0.5em;
+      margin-left: 5px;
+      margin-right: 10px;
       cursor: pointer;
       transition: all 0.3s;
       border-radius: 10px;
@@ -125,6 +125,21 @@ li a:hover {
   {
       color: #860c0c;
       text-shadow: 0 0 15px #860c0c;
+  }
+  #ph
+  {
+      color: #16cc34;
+      text-shadow: 0 0 15px #16cc34;
+  }
+  .btn.ph-btn
+  {
+   
+      box-shadow: 0 15px 15px -11px rgba(7, 192, 47, 0.53);
+  }
+  .btn.ph-btn:hover
+  {
+      transform: scale(1.2);
+      box-shadow: 0 20px 35px -9px rgba(14, 235, 14, 0.65);
   }
   .btn.fb-btn
   {
