--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ html
 
 .background-xenith
 {
-    background-color: rgba(37, 11, 85, 1);
+    background-color: rgba(20,6,46,0.8);
     transition: all 0.8s ease-in;
 }
 .c-white{
