--- a/css/style.css
+++ b/css/style.css
@@ -343,12 +343,13 @@ nav {
 .footer .footer-bottom {
   background: rgb(59, 35, 108);
   color: #686868;
-  height: 150px;
+  
   width: 95%;
   position: absolute;
   bottom: 0px;
   left: 0px;
   padding-top: 20px;
+  margin-bottom: 40px;
 }
 .container {
   display: flex;
@@ -456,7 +457,7 @@ h1 {
 
 .footer {
   line-height: 1;
-  position: relative;
+  position:relative !important;
   width: 100%;
   background: rgb(59, 35, 108);
   min-height: 100px;
@@ -468,6 +469,9 @@ h1 {
   height: 470px;
   font-family: Georgia, serif !important;
   font-size: 20px;
+  bottom: 0;
+  margin-top: 40px;
+  
 }
 
 .social-icon,
@@ -577,6 +581,7 @@ h1 {
   height: 370px;
   display: flex;
   margin-bottom: 10px;
+  justify-content: space-around; 
 }
 .footer .footer-content .footer-section {
   flex: 1;
@@ -584,13 +589,17 @@ h1 {
 }
 .footer .footer-content .about {
   width: 550px;
-  margin-right: 100px;
+  margin-left: 10px;
   height: 300px;
 }
 
 .footer .footer-content .links {
   width: 350px;
-  margin-right: 100px;
+  /* margin-right: 100px; */
+}
+.footer .footer-content .contact-form {
+  margin-right: 10px;
+  
 }
 .footer .footer-content h1,
 .footer .footer-content h2 {
@@ -790,9 +799,44 @@ h1 {
   text-align: justify;
   list-style-type: disc;
 }
+
+@media only screen and (max-width: 1200px) {
+  .footer .footer-content h3
+  {
+    font-size: 1.4rem !important;
+  }
+  .footer .footer-content .links {
+    width:0px;
+    /* margin-right: 100px; */
+  }
+}
 .uk-card-body p {
   font-size: 1.2em;
   font-family: "Arvo", serif;
+}
+@media only screen and (max-width: 900px) {
+  .footer
+  {
+    height: 1200px;
+  }
+  .footer .footer-content
+  {
+    flex-direction: column;
+    /* margin-left:35%; */
+  }
+  .footer .footer-content .links
+  {
+    width:auto;
+  }
+  .footer .footer-bottom 
+  {
+    width: 100%;
+  }
+  .footer .footer-content .about
+  {
+    width:auto;
+  }
+  
 }
 
 @media only screen and (max-width: 700px) {
@@ -825,8 +869,19 @@ h1 {
     overflow: hidden;
     padding: 5%;
   }
-}
 
+}
+@media only screen and (max-width: 400px) {
+.image-card {
+  width: 95vw !important;;
+  height:300px!important;
+  border-radius: var(--radius);
+  position: relative;
+  background-size: cover !important;
+  /* background-repeat: no-repeat; */
+  margin:20px !important;
+}
+}
 @media only screen and (max-width: 1000px) {
   #about {
     height: 110vh;
@@ -935,7 +990,7 @@ main {
 }
 .teamh {
   
-  height:2100px!important;
+  height:auto!important;
 }
 .image-card {
   width: var(--size);
