--- a/css/style.css
+++ b/css/style.css
@@ -998,18 +998,20 @@ main {
   position: relative;
   background-size: cover;
   margin: calc(var(--size) * 20 / 100);
+  
 }
-/* .image-card:before {
+.image-card:before {
   content: "";
   position: absolute;
+  top:90%;
   width: 90%;
-  height: 100%;
+  height: 20%;
   background-image: inherit;
   background-size: cover;
   border-radius: var(--radius);
-  z-index: -1;
+  z-index:-1;
   filter: blur(12px);
-  opacity: 0.1;
+  opacity: 0.6;
   left: 50%;
   transform: translate(-50%, 10%);
-} */
+}
